--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,3 @@
-
 @charset "UTF-8";
 /*!
 * Start Bootstrap - Modern Business v5.0.6 (https://startbootstrap.com/template-overviews/modern-business)
@@ -11365,3 +11364,7 @@ html {
   .badge.bg-primary.bg-gradient.rounded-pill.mb-2 {
     background: pink !important;
   }
+
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
